[package]
name = "lule"
version = "0.1.0"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "a command line to set 255 colors on tty's and other places that use ANSI colors"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file = "1.1.2"
dirs = "3.0.1"
atty = "0.2.14"
clap = "2.33.3"
rand = "0.8.0"
colored = "2.0.0"
# pastel = "0.8.0"
image = "0.23.2"
pastel = { path = "ext/pastel" }
serde = "1.0.118"
serde_json = "1.0.60"
serde_derive = "1.0.118"
getset = "0.1.1"
viuer = "0.3.1"
crossterm = "0.19.0"
anyhow = "1.0.37"
daemonize = "0.4.1"
notify = "4.0.15"
nix = "0.19.1"
tokio = { version= "1.0.1", features = ["fs", "io-util"] }
